--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -17,59 +17,127 @@
     width: 80%;
     margin: 0 auto;
 }
+html {
+    scroll-behavior: smooth;
+}
 
 
 /* NAV */
 nav{
-    width: 50px;
-    height: 50px;
-    background-color: black;
-
+    font-size: 18px;
+    background-color: white;
+    position: fixed;
+    top: 20%;
+    right: 0;
+    width: 60px;
+    height: 200px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
-
-    position: fixed;
-    right: 0;
-    top: 0;
-    margin: 30px;
+    gap: 40px;
+    border-radius: 80px 0 0 30px;
+}
+nav a{
+    color: black;
 }
 
 
 /* PROFILE */
-.profile{
+#profile{
     background-color: black;
     padding-block: 300px;
 }
-.profile .container{ 
+#profile .container{ 
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.profile .container h1, h2{
+#profile .container h1{
+    font-size: 100px;
+    color: white;
+}
+#profile .container h2{
+    font-size: 20px;
     color: white;
 }
 
 
 /* ABOUT */
-.about{
-    height: 600px;
+#about{
     background-color: black;
+    color: white;
+    font-size: 30px;
+}
+#about .container{
     display: flex;
-    gap: 7px;
-    padding-bottom: 7px;
+    flex-direction: column;
+    align-items: center;
+}
+#about .container h1{
+    font-size: 80px;
+}
+
+#background{
+    width: 80%;
+    position: relative;
+}
+#bgdImg{
+    width: 100%;
+    border-radius: 30px 80px;
+}
+#background .overlay{
+    width: 100%;
+    height: 110%;
+    background: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    margin-top: -20px;
+    opacity: 0;
+    transform: translateY(20px);
+}
+#background .overlay:hover{
+    opacity: 1;
+    transform: translateY(0);
+    transition: 500ms;
+}
+#logoUm{
+    width: 20%;
+    position: absolute;
+    z-index: 1;
+    top: -20px; 
+    left: -40px;
+}
+#logoInvoke{
+    width: 50%;
+    position: absolute;
+    z-index: 1;
+    bottom: -30px;
+    right: -100px;
+}
+#quote{
+    text-align: center;
+    font-size: 35px;
+    padding-block: 200px;
 }
 
 
 /* PROJECT */
-.project{
+.title-mob{
+    display: none;
+}
+#project{
     height: 600px;
     background-color: black;
     color: white;
     display: flex;
 }
-.project .container{
+#project .container{
     display: flex;
     justify-content: center;
     gap: 7px;
@@ -95,7 +163,7 @@ nav{
     border-radius: 30px 80px;
     padding: 20px;
 }
-.column-right{
+#project .container .column-right{
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -112,7 +180,7 @@ nav{
 /* FOOTER */
 footer{
     background-color: black;
-    /* padding-block: 20px; */
+    padding-block: 20px;
 }
 footer .container{
     display: flex;
@@ -127,4 +195,84 @@ ul{
     display: flex;
     justify-content: space-between;
     padding: 20px;
+}
+
+@media screen and (max-width: 600px) {
+    nav{
+        font-size: 18px;
+        background-color: white;
+        position: fixed;
+        z-index: 2;
+        top: 0;
+        right: 0;
+        width: 200px;
+        height: 60px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    #profile .container h1{
+        font-size: 90px;
+    }
+    #about .container h1{
+        font-size: 60px;
+        padding-bottom: 40px;
+    }
+    #background p{
+        font-size: 15px;
+    }
+    #background{
+        width: 100%;
+    }
+    #logoInvoke{
+        width: 50%;
+        position: absolute;
+        z-index: 1;
+        bottom: -20px;
+        right: -50px;
+    }
+    #quote{
+        font-size: 25px;
+        padding-block: 80px;
+    }
+
+   #project{
+        height: 1300px;
+        display: flex;
+        flex-direction: column;
+   }
+   #project .container{
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        gap: 7px;
+        padding: 0 7px;
+    }
+    .title-mob{
+        /* width: 80%; */
+        font-size: 40px;
+        margin: 0 auto;
+        text-align: center;
+        display: block;
+        /* background-color: var(--grey); */
+        padding-bottom: 7px;
+    }
+    .deco-box{
+        display: none;
+    }
+    #project .container .column-right{
+        width: 100%;
+    }
+    .project-card{
+        /* width: 200%; */
+        height: 400px;
+    }
+    .project-1{
+        width: 100%;
+        height: 400px;
+    }
+
+
 }
