--- a/style.css
+++ b/style.css
@@ -45,22 +45,30 @@ nav a{
 
 /* PROFILE */
 #profile{
-    background-color: black;
-    padding-block: 300px;
+    background-image: url(./Assets/giphy.gif);
+    /* background-color: black; */
+    padding-block: 200px;
 }
 #profile .container{ 
+    background-color: black;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 20px;
+    border-radius: 80px 30px;
 }
 #profile .container h1{
+    /* background-color: black; */
     font-size: 100px;
     color: white;
+    /* padding: 20px; */
 }
 #profile .container h2{
+    /* background-color: black; */
     font-size: 20px;
     color: white;
+    /* padding: 20px; */
 }
 
 
@@ -69,6 +77,7 @@ nav a{
     background-color: black;
     color: white;
     font-size: 30px;
+    padding-top: 50px;
 }
 #about .container{
     display: flex;
