--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
     --grey: #202124;
     --yellow-font: #d3c851;
     --yellow-bgd: #1d1c16;
+    --purple-font: #a5a1ff;
+    --purple-bgd: #1b1b1f;
+    --pink-font: #e19abf;
+    --pink-bgd: #1f1a1c;
+    --green-font: #62cbbf;
+    --green-bgd: #021f23;
 }
 .full-width{
     width: 100%;
@@ -37,6 +43,8 @@ nav{
     align-items: center;
     gap: 40px;
     border-radius: 80px 0 0 30px;
+    border-left: 4px solid black;
+    border-bottom: 4px solid black;
 }
 nav a{
     color: black;
@@ -47,24 +55,26 @@ nav a{
 #profile{
     background-image: url(./Assets/giphy.gif);
     /* background-color: black; */
-    padding-block: 200px;
+    padding-block: 300px;
 }
-#profile .container{ 
+#profile .container{
     background-color: black;
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 20px;
     border-radius: 80px 30px;
+    opacity: 0.8;
 }
 #profile .container h1{
+    text-align: center;
     /* background-color: black; */
     font-size: 100px;
     color: white;
     /* padding: 20px; */
 }
 #profile .container h2{
+    text-align: center;
     /* background-color: black; */
     font-size: 20px;
     color: white;
@@ -179,12 +189,61 @@ nav a{
     gap: 7px;
 }
 .project-card{
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
     width: 100%;
     height: 100%;
     background-color: var(--grey);
     border-radius: 30px 80px;
     padding: 20px;
-} 
+}
+.project-card a{
+    display: flex;
+    justify-content: center;
+}
+.project-card a img{
+    width: 40%;
+    border-radius: 20px;
+}
+.project-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.project-1 a{
+    display: flex;
+    justify-content: center;
+    /* overflow: hidden; */
+    object-fit: cover;
+    width: 300px;
+    height: 80%;
+}
+.project-1 a img{
+    border-radius: 20px;
+}
+.project-1:hover{
+    /* width: 60%; */
+    background-color: var(--green-bgd);
+    /* border: 7px solid var(--green-font); */
+    padding: 40px;
+    transition: 500ms;
+}
+.project-2:hover{
+    background-color: var(--pink-bgd);
+    /* border: 7px solid var(--pink-font); */
+    padding: 40px;
+    transition: 500ms;
+}
+.project-3:hover{
+    background-color: var(--yellow-bgd);
+    /* border: 7px solid var(--yellow-font); */
+    padding: 40px;
+    transition: 500ms;
+}
 
 /* FOOTER */
 footer{
@@ -193,17 +252,35 @@ footer{
 }
 footer .container{
     display: flex;
-    justify-content: center;
-    padding-block: 20px;    
+    padding-block: 20px;   
+    justify-content: space-between; 
+    align-items: center;
 }
 ul{
     list-style: none;
-    width: 80%;
+    /* width: 80%; */
     color: white;
     font-size: 25px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 60px;
     padding: 20px;
+}
+footer ul a{
+    color: white;
+}
+footer ul a:hover{
+    color: var(--pink-font);
+    transition: 300ms;
+}
+#myName{
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
+}
+#myName:hover{
+    color: var(--pink-font);
+    transition: 300ms;
 }
 
 @media screen and (max-width: 600px) {
@@ -222,14 +299,14 @@ ul{
         align-items: center;
     }
     #profile .container h1{
-        font-size: 90px;
+        font-size: 70px;
     }
     #about .container h1{
         font-size: 60px;
         padding-bottom: 40px;
     }
     #background p{
-        font-size: 15px;
+        font-size: 14px;
     }
     #background{
         width: 100%;
@@ -247,7 +324,7 @@ ul{
     }
 
    #project{
-        height: 1300px;
+        height: 1000px;
         display: flex;
         flex-direction: column;
    }
@@ -272,15 +349,23 @@ ul{
         display: none;
     }
     #project .container .column-right{
+        display: flex;
+        align-items: center;
         width: 100%;
     }
     .project-card{
-        /* width: 200%; */
-        height: 400px;
+        width: 80%;
+        height: 250px;
     }
     .project-1{
-        width: 100%;
+        width: 80%;
         height: 400px;
+    }
+    footer .container{
+        justify-content: center;
+    }
+    #myName{
+        display: none;
     }
 
 
