--- a/style.css
+++ b/style.css
@@ -55,7 +55,10 @@ nav a{
 #profile{
     background-image: url(./Assets/giphy.gif);
     /* background-color: black; */
-    padding-block: 300px;
+    height: 100vh;
+    /* justify-content: center; */
+    /* align-items: center; */
+    padding-block: 250px;
 }
 #profile .container{
     background-color: black;
